--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "asciiTest",
   "description": "Turn an image into ASCII art",
-  "devDependencies": {
+  "dependencies": {
     "ascii": "^0.1.0",
+    "canvas": "^1.2.7",
     "gyp": "^0.5.0",
     "sharp": "^0.9.3"
   }
