--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "asciiTest",
-  "description": "Turn an image into ASCII art",
-  "dependencies": {
-    "ascii": "^0.1.0",
-    "canvas": "^1.2.7",
-    "gyp": "^0.5.0",
-    "sharp": "^0.9.3"
-  }
+    "name": "asciiTest",
+    "description": "Turn an image into ASCII art",
+    "scripts": {
+        "start": "node ./app.js"
+    },
+    "dependencies": {
+        "ascii": "^0.1.0",
+        "canvas": "^1.2.7",
+        "gyp": "^0.5.0",
+        "restify": "^4.0.0",
+        "sharp": "^0.9.3"
+    }
 }
