--- a/nodeApp/package.json
+++ b/nodeApp/package.json
@@ -8,6 +8,7 @@
         "ascii": "^0.1.0",
         "canvas": "^1.2.7",
         "gyp": "^0.5.0",
+        "request": "^2.61.0",
         "restify": "^4.0.0",
         "sharp": "^0.9.3"
     }
