--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 web:
     hostname: ascii_web
     domainname: ascii_web
-    build: ./nodeApp
+    build: ./server
     volumes:
-        - ./nodeApp/app:/src/app/
+        - ./server/app/:/src/app/
     ports:
         - "80:80"
